cabal-version:      2.4
name:               comp-programming-cabal
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             yukikurage
maintainer:         yukikurage.music@gmail.com

common shared-properties
  default-language: Haskell2010
  build-depends: base, containers, primitive, vector-algorithms, vector, bytestring, array, heap, attoparsec
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wcompat

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    import:              shared-properties
    -- cabal-fmt: expand src
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src

executable comp-programming-cabal
    import:              shared-properties
    --main-is: ModIntTest.hs
    main-is: ABC199/C_Short.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  comp-programming-cabal
    --hs-source-dirs: app
    hs-source-dirs: problems

test-suite comp-programming-cabal-test
    import:              shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
